--- a/threshold/pubspec.yaml
+++ b/threshold/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   responsive_builder: ^0.1.5
+  dwds: ^5.0.0
 
   cupertino_icons: ^0.1.3
   url_launcher: ^5.1.4
