--- a/threshold/pubspec.yaml
+++ b/threshold/pubspec.yaml
@@ -14,11 +14,12 @@ dependencies:
   flutter:
     sdk: flutter
   responsive_builder: ^0.1.5
+  universal_html: ^1.2.3
+  url_launcher_web: ^0.1.1+6
+  url_launcher: ^5.4.11
   dwds: ^5.0.0
 
   cupertino_icons: ^0.1.3
-  url_launcher: ^5.1.4
-  url_launcher_web: ^0.1.0
 
 dev_dependencies:
   flutter_test:
