--- a/threshold/pubspec.yaml
+++ b/threshold/pubspec.yaml
@@ -82,3 +82,7 @@ flutter:
     - assets/icons/icons8-github-30.png
     - assets/icons/icons8-instagram-30.png
     - assets/icons/icons8-linkedin-2-30.png
+    - assets/images/workbg/Threshold.png
+    - assets/images/workbg/Arena.png
+    - assets/images/workbg/Hustle.png
+    - assets/images/workbg/Pointify.png
