--- a/threshold/pubspec.yaml
+++ b/threshold/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   url_launcher_web: ^0.1.1+6
   url_launcher: ^5.4.11
   dwds: ^5.0.0
-  carousel_pro: ^1.0.0
+  modal_bottom_sheet: ^0.2.0+1
 
   cupertino_icons: ^0.1.3
 
@@ -87,3 +87,7 @@ flutter:
     - assets/images/workbg/Hustle.png
     - assets/images/workbg/Pointify.png
     - assets/images/workbg/Ujjay.png
+    - assets/images/workbg/ujjay/
+    - assets/images/workbg/pointify/
+    - assets/images/workbg/hustle/
+    - assets/images/workbg/arena/
