--- a/threshold/pubspec.yaml
+++ b/threshold/pubspec.yaml
@@ -91,3 +91,4 @@ flutter:
     - assets/images/workbg/pointify/
     - assets/images/workbg/hustle/
     - assets/images/workbg/arena/
+    - assets/images/workbg/threshold/
