--- a/threshold/pubspec.yaml
+++ b/threshold/pubspec.yaml
@@ -8,19 +8,17 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  responsive_builder: ^0.1.5
-  universal_html: ^1.2.3
-  url_launcher_web: ^0.1.1+6
-  url_launcher: ^5.4.11
-  dwds: ^5.0.0
-  modal_bottom_sheet: 2.0.0-nullsafety.1
+  universal_html: ^2.2.4
+  url_launcher: ^6.2.3
+  dwds: ^23.2.0
+  modal_bottom_sheet: ^3.0.0-pre
 
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
